# smartledger

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
apps/chaincode/: package.json
apps/chaincode/src/: index.ts
apps/dashboard-ui/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/dashboard-ui/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard-ui/src/app/conflicts/: page.tsx
apps/dashboard-ui/src/app/contracts/: page.tsx
apps/dashboard-ui/src/app/contracts/[contractId]/: page.tsx
apps/dashboard-ui/src/app/party/: page.tsx
apps/dashboard-ui/src/app/quarantine/: page.tsx
apps/dashboard-ui/src/app/reports/: page.tsx
apps/dashboard-ui/src/components/: IdentitySelector.tsx  NavBar.tsx
apps/dashboard-ui/src/lib/: api.ts  partyApi.ts
docs/: ARCHITECTURE.md  DEMO_WALKTHROUGH.md  ENDPOINTS.md  FABRIC-POC-LIMITATIONS.md  FABRIC_CONFIG.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  architecture-diagrams.html
infra/chaincode/smartledger-cc/: index.js  package-lock.json  package.json
infra/chaincode/smartledger-cc/lib/: smartledger-contract.js
infra/docker/: agent.Dockerfile  dashboard_api.Dockerfile  mcp_ledger.Dockerfile  mcp_reporting.Dockerfile  mcp_semantic_ai.Dockerfile  mcp_simulated.Dockerfile  mcp_validation.Dockerfile
infra/docker/postgres/: init.sql
infra/fabric/: configtx.yaml  crypto-config.yaml  docker-compose.fabric.yml
infra/fabric/explorer/: config.json  docker-compose.explorer.yml
infra/fabric/explorer/connection-profile/: smartledger-network.json
infra/fabric/scripts/: setup-fabric.sh  start-explorer.sh
scripts/: dev_start.sh  run_origination_demo.py  seed_demo.py  setup.sh
scripts/clips/: 01_origination_happy.sh  02_unhappy_quarantine.sh  03_customer_update.sh  04_conflict_resolution.sh  05_pbac.sh  06_party_portal.sh  07_explorer_verification.sh  08_reports.sh  lib.sh
src/agent/: main.py  pyproject.toml
src/agent/core/: event_loop.py  locks.py  mcp_client.py  saga.py
src/agent/flows/: customer_update_flow.py  origination.py  override.py  payment.py  pdf_ingestion.py
src/dashboard_api/: main.py  mcp_clients.py  pyproject.toml
src/dashboard_api/middleware/: __init__.py  access_audit.py  access_control.py  field_filter.py  party_auth.py
src/dashboard_api/routers/: conflicts.py  contracts.py  party.py  quarantine.py  reports.py
src/event_bus/: pyproject.toml
src/mcp_servers/ledger/: fabric_client.py  pyproject.toml  server.py
src/mcp_servers/reporting/: pyproject.toml  server.py
src/mcp_servers/semantic_ai/: pyproject.toml  server.py
src/mcp_servers/simulated/: launcher.py  pyproject.toml
src/mcp_servers/simulated/crm/: server.py
src/mcp_servers/simulated/customer_portal/: server.py
src/mcp_servers/simulated/dealer/: server.py
src/mcp_servers/simulated/insurance/: server.py
src/mcp_servers/simulated/integration/: server.py
src/mcp_servers/simulated/ivr/: server.py
src/mcp_servers/simulated/llas/: server.py
src/mcp_servers/simulated/mobile_app/: server.py
src/mcp_servers/simulated/oracle_los/: server.py
src/mcp_servers/simulated/payment/: server.py
src/mcp_servers/simulated/pricing_engine/: server.py
src/mcp_servers/simulated/rules_engine/: server.py
src/mcp_servers/simulated/salesforce_los/: server.py
src/mcp_servers/validation/: pyproject.toml  server.py
src/shared/: config.py  logging.py  mcp_caller.py  pyproject.toml
src/shared/models/: __init__.py  common.py  entities.py  records.py  saga.py  validation.py
src/shared/schemas/common/: address.json  event_envelope.json  money.json
src/shared/schemas/entities/: account.json  contract.json  contract_party.json  customer.json  financial_terms.json  payment.json  vehicle.json
src/shared/schemas/events/: contract_originated.json  dealer_pdf_submitted.json  dealer_submitted.json  insurance_lapsed.json  insurance_verified.json  payment_missed.json  payment_received.json
src/shared/schemas/records/: accounting_record.json  contract_lifecycle.json  origination_record.json
src/shared/schemas/validation/: quarantine_record.json  validation_request.json  validation_result.json
tests/: conftest.py
tests/e2e/: test_origination_happy_path.py  test_origination_unhappy_path.py
tests/unit/: test_ledger.py  test_locks.py  test_oracle_los.py  test_override_flow.py  test_payment_flow.py  test_pdf_ingestion_flow.py  test_reporting_mcp.py  test_saga.py  test_validation.py
