[project]
name = "smartledger"
version = "0.1.0"
description = "SmartLedger — Validation-gated immutable ledger for auto/vehicle finance"
requires-python = ">=3.12"
readme = "README.md"

[tool.uv.workspace]
members = [
    "src/shared",
    "src/agent",
    "src/event_bus",
    "src/dashboard_api",
    "src/mcp_servers/validation",
    "src/mcp_servers/ledger",
    "src/mcp_servers/semantic_ai",
    "src/mcp_servers/reporting",
    "src/mcp_servers/simulated",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring live infra (postgres, redis, all MCP servers)",
]
