[project]
name = "smartledger-shared"
version = "0.1.0"
description = "Shared schemas, Pydantic models, and constants for SmartLedger"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jsonschema>=4.22",
    "structlog>=24.0",
    "pyjwt>=2.8",
]

# Tell setuptools: look one level up (in src/) and include only the 'shared' package tree.
# This avoids the flat-layout "multiple top-level packages" error caused by models/ and schemas/
# sitting at the same level without an explicit package-dir mapping.
[tool.setuptools.packages.find]
where = [".."]
include = ["shared", "shared.*"]
